--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -1,13 +1,34 @@
-* {
+body {
+    color: #000;
+    background-color: #f5f5f5;
+    font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    box-sizing: border-box;
+    margin: 0;
+}
+
+h3 {
+    margin: 0 0 14px 0;
+}
+
+input {
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    height: 28px;
+    padding: 0 5px 0 5px;
+    font-size: 14px;
     box-sizing: border-box;
 }
 
-body {
-    color: #000;
-    background-color: #294546;
-    font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    margin: 0;
+select {
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    height: 28px;
+    padding: 0 2px 0 2px;
+    font-size: 14px;
+    box-sizing: border-box;
 }
 
 button {
@@ -29,41 +50,29 @@ button:active {
     background-color: #F29747;
 }
 
-select {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    height: 24px;
-    padding-left: 2px;
-}
-
 label {
-    font-weight: 700;
+    color: #707070;
     display: inline-block;
+    padding: 0 5px 0 5px;
+    width: 130px;
 }
 
-.container {
-    min-width: 300px;
-    max-width: 50%;
+.header {
+    color: #fff;
+    background-color: #294546;
+    padding: 8px;
+}
+
+.content {
+    margin-top: 10px;
+    background-color: #fff;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     padding: 10px;
 }
 
-.row {
-    width: 100%;
-    content: " ";
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-.form-header {
-    background-color: #F29747;
-    padding: 5px;
-    color: #FFF;
-}
-
-.form-content {
-    padding: 5px;
+.field-group {
+    margin-bottom: 10px;
 }
 
 .checkbox {
@@ -76,30 +85,4 @@ label {
     display: inline;
     font-weight: 400;
     cursor: pointer;
-}
-
-.header {
-    color: #fff;
-    background-color: #294546;
-    padding: 8px;
-}
-
-.header-text {
-    font-size: 30px;
-}
-
-div.light {
-    background-color: #99B4BA;
-}
-
-#game-select {
-    min-width: 200px;
-}
-
-#btn-check-all {
-    margin-right: 15px;
-}
-
-#editor {
-    height: 500px;
 }
