--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -8,7 +8,27 @@ body {
 }
 
 h3 {
-    margin: 0 0 14px 0;
+    margin: 0;
+}
+
+h3.before {
+    margin-top: 20px;
+}
+
+h3.after {
+    margin-bottom: 14px;
+}
+
+h4 {
+    margin: 0 0 14px 10px;
+}
+
+h4.before {
+    margin-top: 25px;
+}
+
+h4.before.small {
+    margin-top: 15px;
 }
 
 input {
@@ -19,6 +39,14 @@ input {
     padding: 0 5px 0 5px;
     font-size: 14px;
     box-sizing: border-box;
+}
+
+input[type=checkbox] {
+    width: 18px;
+    height: 18px;
+    margin: 0 0 0 0;
+    box-sizing: border-box;
+    vertical-align: middle;
 }
 
 select {
@@ -57,10 +85,22 @@ label {
     width: 130px;
 }
 
+#add-faction {
+    margin-top: 10px;
+}
+
+#generate-mission {
+    margin-top: 10px;
+}
+
 .header {
     color: #fff;
     background-color: #294546;
     padding: 8px;
+}
+
+.header-text {
+    font-size: 30px;
 }
 
 .content {
@@ -73,16 +113,51 @@ label {
 
 .field-group {
     margin-bottom: 10px;
+    height: 28px;
 }
 
-.checkbox {
-    width: 220px;
-    padding: 2px;
+.faction-container {
+    width: 750px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-top: 15px;
+    padding-top: 10px;
+}
+
+.faction-field-container {
+    padding-left: 5px;
+}
+
+.faction-group-fields {
+    margin-left: 15px;
+}
+
+.field-group.group-template {
+    margin-bottom: 5px;
+    height: 20px;
     display: inline-block;
 }
 
-.checkbox label {
-    display: inline;
-    font-weight: 400;
-    cursor: pointer;
+.field-group.group-template input[type=checkbox] {
+    width: 14px;
+    height: 14px;
+}
+
+.field-group.group-template label {
+    padding: 0 10px 0 2px;
+    width: 150px;
+}
+
+.faction-vehicle-classname-fields {
+    margin-left: 10px;
+}
+
+.remove-footer {
+    border-top: 1px solid #ccc;
+    background-color: #f5f5f5;
+    padding: 5px;
+}
+
+.remove-button {
+    float: right;
 }
