--- a/src/resources/client/styles.css
+++ b/src/resources/client/styles.css
@@ -116,6 +116,13 @@ label {
     height: 28px;
 }
 
+.description {
+    margin: 0 0 15px 145px;
+    color: #707070;
+    font-size: 12px;
+}
+
+
 .faction-container {
     width: 750px;
     border: 1px solid #ccc;
