--- a/src/resources/client/styles.css
+++ b/src/resources/client/styles.css
@@ -7,12 +7,6 @@ body {
     margin: 0;
 }
 
-body.header {
-    color: #fff;
-    background-color: #294546;
-    padding: 8px;
-}
-
 h3 {
     margin: 0;
 }
@@ -97,6 +91,12 @@ label {
 
 #generate-mission {
     margin-top: 10px;
+}
+
+.header {
+    color: #fff;
+    background-color: #294546;
+    padding: 8px;
 }
 
 .header-text {
