--- a/src/resources/client/styles.css
+++ b/src/resources/client/styles.css
@@ -117,7 +117,7 @@ label {
 }
 
 .description {
-    margin: 0 0 15px 145px;
+    margin: 0 0 15px 150px;
     color: #707070;
     font-size: 12px;
 }
@@ -133,6 +133,10 @@ label {
 
 .faction-field-container {
     padding-left: 5px;
+}
+
+.check-all-groups {
+    margin: 5px 0 10px 15px;
 }
 
 .faction-groups {
