--- a/src/resources/client/styles.css
+++ b/src/resources/client/styles.css
@@ -5,6 +5,7 @@ body {
     font-size: 14px;
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 h3 {
@@ -94,13 +95,46 @@ label {
 }
 
 .header {
+    height: 45px;
     color: #fff;
     background-color: #294546;
-    padding: 8px;
 }
 
 .header-text {
+    height: 45px;
+    line-height: 45px;
     font-size: 30px;
+    margin-left: 10px;
+    margin-right: 30px;
+    float: left;
+    
+}
+
+.menu {
+    height: 45px;
+    line-height: 45px;
+    margin: 0;
+}
+
+.menu-item {
+    font-size: 22px;
+    padding: 0 7px 0 7px;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.menu-item a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu-item:hover {
+    background-color: #B96F29;
+}
+
+.menu-item.active {
+    background-color: #F29747;
 }
 
 .content {
